--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,38 @@
-astroid==2.1.0
-autopep8==1.4.3
-certifi==2019.3.9
+appdirs==1.4.3
+asgiref==3.2.10
+astroid==2.4.2
+autopep8==1.5.4
+CacheControl==0.12.6
+certifi==2019.11.28
 chardet==3.0.4
-defusedxml==0.5.0
-Django==2.2
-django-allauth==0.39.1
-django-crispy-forms==1.7.2
-django-tinymce4-lite==1.7.4
-gunicorn==19.9.0
+colorama==0.4.3
+contextlib2==0.6.0
+distlib==0.3.0
+distro==1.4.0
+Django==3.1.1
+gunicorn==20.0.4
+html5lib==1.0.1
 idna==2.8
-isort==4.3.4
-jsmin==2.2.2
-lazy-object-proxy==1.3.1
+ipaddr==2.2.0
+isort==5.5.3
+lazy-object-proxy==1.4.3
+lockfile==0.12.2
 mccabe==0.6.1
-oauthlib==3.0.1
-pep8==1.7.1
-Pillow==6.2.0
-psycopg2-binary==2.7.7
-pycodestyle==2.5.0
-pylint==2.2.2
-python3-openid==3.1.0
-pytz==2018.9
-requests==2.21.0
-requests-oauthlib==1.2.0
-six==1.12.0
-sqlparse==0.3.0
-typed-ast==1.1.1
-urllib3==1.24.2
-wrapt==1.11.0
+msgpack==0.6.2
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pylint==2.6.0
+pyparsing==2.4.6
+pytoml==0.1.21
+pytz==2020.1
+requests==2.22.0
+retrying==1.3.3
+six==1.14.0
+sqlparse==0.3.1
+toml==0.10.1
+urllib3==1.25.8
+webencodings==0.5.1
+wrapt==1.12.1
